@@ -7,8 +7,11 @@ apport (0.17) UNRELEASED; urgency=low
   * Move /proc information collection from apport to new function
     report_add_proc_info() in apport_utils.py, add test suite check, and fix
     handling of failed /proc/$$/environ reading.
+  * preloadlib/libapport.c: Route gcore's stderr to /dev/null to suppress
+    error messages during the test suite and to become more compatible to the
+    kernel behaviour.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 22 Aug 2006 16:41:58 +0200
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 22 Aug 2006 16:46:14 +0200
 
 apport (0.16) edgy; urgency=low
 
